# xapp-symbolic-icons

./: .gitignore  AUTHORS  README.md  meson.build
.github/workflows/: sync-branches.yml
LICENSES/: BSD-3-Clause.txt  GitLab.txt
debian/: changelog  control  copyright  install
icons/: list-missing-icons.py  meson.build  xsi-adwaita-symbolic.info  xsi-replace-adwaita-symbolic.in
